package com.sge.dao;

import com.sge.model.Advertencia;

public class AdvertenciaDAO extends GenericDAO<Advertencia> {
    public AdvertenciaDAO() {
        super(Advertencia.class);
    }
}
