package com.sge.dao;
import com.sge.model.Aula;

public class AulaDAO extends GenericDAO<Aula> {
    public AulaDAO() {
        super(Aula.class);
    }
}