package com.sge.dao;
import com.sge.model.Curso;

public class CursoDAO extends GenericDAO<Curso> {
    public CursoDAO() {
        super(Curso.class);
    }
}